<!--
  ~ Copyright (C) 2017 MINDORKS NEXTGEN PRIVATE LIMITED
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     https://mindorks.com/license/apache-v2
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License
  -->

<resources>
    <string name="app_name">SFA</string>

    <!--Toolbar menus-->
    <string name="clear">Clear</string>
    <string name="cut">Cut</string>
    <string name="copy">Copy</string>
    <string name="paste">Paste</string>
    <string name="delete">Delete</string>
    <string name="share">Share</string>

    <!--Drawer-->
    <string name="open_drawer">Drawer Open</string>
    <string name="close_drawer">Drawer Close</string>

    <!--Drawer Menus-->
    <string name="about">About</string>
    <string name="logout">Logout</string>
    <string name="feed">My Feed</string>

    <!--App Message-->
    <string name="api_retry_error">Please retry!</string>
    <string name="api_default_error">Something wrong happened!</string>
    <string name="some_error">Some Error Occurred!</string>
    <string name="connection_error">Internet connection lost!</string>

    <!--Landing-->
    <string name="btn_login">Log in</string>
    <string name="forgot_password">ForgotPassword?</string>
    <string name="create_new_account">Create New Account</string>
    <string name="sfa">SFA</string>
    <string name="sfa1">Sales Force Automation</string>

    <!--facebook-->
    <string name="facebook_app_id">1028552320617144</string>
    <string name="fb_login_protocol_scheme">fb1028552320617144</string>

    <!--Login-->
    <string name="login_dummy">Login Dummy</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="Create_New_Account">Create New Account</string>

    <!--reset-->
    <string name="sfa_reset">SFA</string>
    <string name="sfa1_reset_sales">Sales Force Automation</string>
    <string name="sfa3_reset">Reset Password</string>
    <string name="sfa4_reset_text">It seems you have forgotten your password.That("'s") OK.Just type the Email you use
to login and we will reset it for you.We will send you an Email with a secure link to type a new password.Note that the link will
expire in 24 hours.</string>
    <string name="sfa_email_reset">E-mail</string>
    <string name="sfa_btn_reset">Reset Password</string>
    
    <!--verification-->
    <string name="veri_mobile">Mobile Verification</string>
    <string name="veri_text">A verification code has been sent to your mobilephone,Key in the
        verification code to complete your registration</string>
    <string name="veri_code">Verification Code</string>
    <string name="btn_confirm">Confirm</string>
    <string name="txt_resend">Resend Verification Code</string>

    <!--register-->
    <string name="First_Name">First Name</string>
    <string name="Last_Name">Last Name</string>
    <string name="Mobile_No.">Mobile No.</string>
    <string name="Email">Email</string>
    <string name="Password">Password(6-20 character)</string>
    <string name="Pick_Your_Address_Here">pick your address here!</string>
    <string name="Legal_Document">legal document</string>
    <string name="Submit">Submit</string>


    <!--Login Validation-->
    <string name="empty_email">Please provide a non empty email.</string>
    <string name="invalid_email">Please provide a valid email.</string>
    <string name="empty_password">Please provide a non empty password.</string>

    <!--Register Validation-->
    <string name="empty_first_name">Please Enter Your First Name</string>
    <string name="empty_last_name">Please Enter Your Last Name</string>
    <string name="empty_mobile_number">Please Enter Your Mobile Number</string>
    <string name="empty_reg_email">Please Enter Your Email Address</string>
    <string name="empty_reg_invalid_email">Please Enter Valid Email</string>
    <string name="empty_reg_password">Please Enter Your Password</string>
    <string name="empty_location">Please Pick Your Location</string>
    <string name="empty_files">Please Enter Your Files</string>
    <!--about fragment-->
    <string name="project_info">This sample app implements MVP architecture using Dagger2, GreenDao, RxJava, FastAndroidNetworking and PlaceholderView</string>
    <string name="link_mvp_blog">1. https://blog.mindorks.com</string>
    <string name="link_mvp_repo">2. https://github.com/MindorksOpenSource/android-mvp-architecture</string>
    <string name="link_mindorks_blog">3. https://blog.mindorks.com</string>
    <string name="link_mindorks_repo">4. https://github.com/MindorksOpenSource</string>
    <string name="version">"version"</string>

    <!--rating dialog-->
    <string name="rate_us">Rate Us</string>
    <string name="rating_message">Please let us know, how can we improve ourselves?</string>
    <string name="rating_play_store_redirect_message_line_1">Awesome! Thank you for the 5 stars.</string>
    <string name="rating_play_store_redirect_message_line_2">Please help others, in knowing some good things about this app.</string>
    <string name="rating_play_store_text">Rate us on Play Store</string>
    <string name="rating_not_provided_error">Please provide us stars.</string>
    <string name="rating_thanks">Thank you!</string>

    <!--play store-->
    <string name="app_google_play_store_link">"https://play.google.com/store/apps/details?id="</string>
    <string name="app_market_link">"market://details?id="</string>

    <!--button-->
    <string name="later">Later</string>
    <string name="submit">Submit</string>

    <!--feed-->
    <string name="title">My Feed</string>
    <string name="open_source">Open Source</string>
    <string name="blog">Blog</string>

    <!--empty state-->
    <string name="empty_screen">We do not have anything\nhere right now.</string>
    <string name="please_retry">Please Retry</string>
    <string name="retry">Retry</string>
    <string name="title_activity_google_maps">Map</string>

</resources>
