<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/txt_sfa_reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:text="@string/sfa_reset"
        android:textSize="90dp" />

    <TextView
        android:id="@+id/sfa_reset_sales"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_sfa_reset"
        android:layout_centerHorizontal="true"
        android:text="@string/sfa1_reset_sales"
        android:textSize="18dp" />

    <TextView
        android:id="@+id/txt_reset_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sfa_reset_sales"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/sfa3_reset"
        android:textSize="18dp" />

    <TextView
        android:id="@+id/txt_sfa4_reset"
        android:layout_width="330dp"
        android:layout_height="120dp"
        android:layout_below="@+id/txt_reset_txt"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/sfa4_reset_text" />

    <EditText
        android:id="@+id/edit_email_reset"
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_sfa4_reset"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:hint="@string/sfa_email_reset" />

    <Button
        android:id="@+id/btn_reset_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_email_reset"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/sfa_btn_reset" />

</RelativeLayout>