<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_black_light"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="80dp"
        app:cardCornerRadius="7dp"
        app:cardElevation="22dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            app:cardCornerRadius="3dp">


            <EditText
                android:id="@+id/reg_firstname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/input_border_bottom"
                android:gravity="left"
                android:hint="@string/First_Name"
                android:maxLines="1"
                android:padding="10dp"
                android:singleLine="true"
                android:textSize="15dp" />

            <EditText
                android:id="@+id/reg_lastname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/input_border_bottom"
                android:gravity="left"
                android:hint="@string/Last_Name"
                android:maxLines="1"
                android:padding="10dp"
                android:singleLine="true"
                android:textSize="15dp" />

            <EditText
                android:id="@+id/reg_mobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/input_border_bottom"
                android:gravity="left"
                android:hint="@string/Mobile_No."
                android:maxLines="1"
                android:padding="10dp"
                android:singleLine="true"
                android:textSize="15dp" />

            <EditText
                android:id="@+id/reg_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/input_border_bottom"
                android:gravity="left"
                android:hint="@string/Email"
                android:padding="10dp"
                android:singleLine="true"
                android:textSize="15dp" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:hint="@string/Password"
                android:textColorHint="@color/gray"
                app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout"
                app:passwordToggleEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/reg_password"
                    style="@style/TextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/input_border_bottom"
                    android:cursorVisible="true"
                    android:gravity="center|start"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:textColor="@color/black_effective"
                    android:textSize="15dp" />
            </android.support.design.widget.TextInputLayout>


            <TextView
                android:id="@+id/reg_pick_location"
                style="@style/TextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/input_border_bottom"
                android:cursorVisible="true"
                android:gravity="left"
                android:hint="@string/Pick_Your_Address_Here"
                android:maxLines="1"
                android:padding="10dp"
                android:singleLine="true"
                android:textSize="15dp" />

            <TextView
                android:id="@+id/reg_attach_file"
                style="@style/TextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/input_border_bottom"
                android:cursorVisible="true"
                android:gravity="left"
                android:hint="@string/Legal_Document"
                android:padding="10dp"
                android:singleLine="true"
                android:textSize="15dp" />

            <Button
                android:id="@+id/btn_reg_submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/Submit" />

        </LinearLayout>

    </android.support.v7.widget.CardView>


</RelativeLayout>